components/evaluator/tests/compile-fail/let_redeclaration.rs
// error-pattern:Redeclaration of let/const variable

let a = 1;
let a = 2;